package ar.edu.utn.frba.dds.grupo05.domain.entities.heladeras.incidentes;

public enum EstadoFallaTecnica {
    PENDIENTE,
    SOLUCIONADA
}
